--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 # 数据源配置，请修改为你项目的实际配置
 spring.datasource.url=jdbc:mysql://localhost:3306/springdemo
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=leonlaiNHK
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8450
