--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,9 @@
         </dependency>
         <!--阿里 FastJson依赖-->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.44</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
         </dependency>
         <!--阿里 Druid Spring Boot Starter依赖-->
         <dependency>
