--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,9 @@
 # 数据源配置，请修改为你项目的实际配置
 spring.datasource.url=jdbc:mysql://localhost:3306/springdemo
 spring.datasource.username=root
-spring.datasource.password=leonlaiNHK
+# 根据不同的服务器切换
+spring.datasource.password=root
+#spring.datasource.password=leonlaiASAHI
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8450
