--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,8 +3,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springdemo
 spring.datasource.username=root
 # 根据不同的服务器切换
-spring.datasource.password=root
-#spring.datasource.password=leonlaiASAHI
+#spring.datasource.password=root
+spring.datasource.password=leonlaiASAHI
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8450
