.ClassLoaders$AppClassLoader cannot be cast to class java.net.URLClassLoader

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springdemo
 spring.datasource.username=root
 # 根据不同的服务器切换
 #spring.datasource.password=root
+#nara
 spring.datasource.password=leonlaiASAHI
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
