--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,5 @@ spring.datasource.password=leonlaiASAHI
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=8450
+
+#deprecated
