--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,8 @@
 # 开发环境配置
 # 数据源配置，请修改为你项目的实际配置
-spring.datasource.url=jdbc:mysql://localhost:3306/springdemo
+spring.datasource.url=jdbc:mysql://localhost:3306/springdemo?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 # 根据不同的服务器切换
 #spring.datasource.password=root
-#nara
-spring.datasource.password=leonlaiASAHI
+spring.datasource.password=nara5602362
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-server.port=8450
-
-#deprecated
