new server port

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,5 @@ spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.password=nara5602362
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+server.port=8450
